fixed background on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,9 @@ body {
     margin: 0;
     padding:0;
     background-color: #2e145d;
-}
-
-.img-holder {
-    padding: 0;
-    margin: 0;
+    background-image: url("https://i.postimg.cc/T3SGc5RN/armillar-ball-3408811.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-image {
@@ -16,11 +14,6 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-.container-container {
-    position: relative;
-    padding: 20px;
 }
 
 * {
@@ -39,7 +32,7 @@ body {
     justify-content: center;
     align-items: center;
     max-width: 80rem;
-    margin: auto;
+    margin: 20px auto;
     padding:2rem;
     background-color: rgba(188, 123, 59, 0.7);
     border-radius: 20px;
@@ -126,6 +119,14 @@ body {
         display: none;
     }
 }
+
+@media(max-width: 800px) {
+    body {
+        background-image: url("https://i.postimg.cc/3Jt3dbzT/mobbackground.jpg");
+        background-size: cover;
+    }
+}
+
 
 
 
